docroot/profiles/custom/sitenow/css/admin-overrides.css
.field--widget-paragraphs * {
  box-sizing: border-box;
}
/* Paragraph labels */
.field--widget-paragraphs .paragraph-type-label {
  background-color: #f26666;
  color: #ffffff;
  padding: 0 0.3em;
  border-radius: 4px;
}
/* Draggable table improvements */
.js .field--widget-paragraphs table td {
  padding: 10px 0 10px 10px;
}
.field--widget-paragraphs .field-multiple-drag {
  position: relative;
}
.field--widget-paragraphs .field-multiple-drag > .tabledrag-handle {
  width: 30px;
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0 !important;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #F5F4FB;
}
.field--widget-paragraphs .field-multiple-drag > .tabledrag-handle:hover,
.field--widget-paragraphs .field-multiple-drag > .tabledrag-handle:focus,
.field--widget-paragraphs .field-multiple-drag > .tabledrag-handle:active {
  background-color: #81C1D5;
}
.field--widget-paragraphs .field-multiple-drag > .tabledrag-handle > .handle {
  height: 16px;
  width: 16px;
  background-position: 0 0;
  margin: 0;
  padding: 0;
}

.adminimal .webform-ui-element-type-table .button--small {
  background: #0071b8;
}

/* Add padding for paragraph textarea fields */
.field--widget-paragraphs .field--type-text-long  .cke_wysiwyg_frame {
  padding: 10px;
}

